--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
   overflow-x: clip;
 }
 .App > :nth-child(1) {
-  background-color: black;
+  background-color: rgb(110, 45, 78);
   position: relative;
 }
