--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ a {
   font-weight: 500;
   padding: 0.6rem 1.4rem;
   color: white;
-  background-color: blue;
+  background-color: green;
   border: none;
   border-radius: 4px;
   transition: all 300ms ease-in;
